2006-01-25  Michael Schlenker <mic42@users.sourceforge.net>

	* bench_wcsv.tcl : Fixed bug when trying to format benchs on windows.
	* bench_wtext.tcl: The interpreter path was truncated due to a misuse of
	split and lindex, where string first was appropriate.

2005-10-27  Andreas Kupries <andreask@activestate.com>

	* bench.tcl (::bench::norm): Fixed bug leaving time data in
	  non-reference column when the reference is empty. To the unwary
	  the result looks like factors, which have ridiculous values. Now
	  the row is shown, but empty.

2005-10-21  Andreas Kupries <andreask@activestate.com>

	* bench.tcl (::bench::del): New command. Removal of a column from
	  benchmark data.

2005-10-18  Andreas Kupries <andreask@activestate.com>

	* bench_read.tcl: New file. Command and package to read benchmark
	  data in the text, csv, or raw formats.

	* bench.tcl (::bench::edit): New command. Changes specified
	  interpreter path to user specified value. Needed if we wish to
	  merge data coming from the same interpreter, for different
	  revisions of the package under test.

2005-10-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Package derived from the original code added to Tcllib.

2004-12-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/parse.bench: ensure file size is consistent between interp
	runs with formatted BOUND string.

2004-12-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/runbench.1: fix doc for -throwerrors [Bug 1091766]

	* runbench.tcl (getInterps): use exec << instead of echo [Bug 1091764]

2004-12-24  Miguel Sofer <msofer@users.sf.net>

	* tcl/namespace.bench: new benchmark, measures the cost of calling
	the same global command alternating different namespaces.

2004-12-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/array.bench (new): array hash benchmarks

	* tcl/file.bench: fix checkall to operate for tclsh <=8.0

	* tcl/string.bench: fix string match -nocase for tclsh <=8.2
